--- a/index.html
+++ b/index.html
@@ -2,9 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <! This gives the browser instructions on how to control the page's dimensions and scaling >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
+    <link rel="stylesheet" href="style.css" />
+
+    <! Defer specifies that the script is executed when the page has finished parsing >
+    <script src="script.js" defer></script>
   </head>
   <body>
+    <h1>Next birthday</h1>
+    <div class="counting-container">
+      <div class="days">
+        <p class="big-text" id="days"></p>
+        <span>days</span>
+      </div>
+      <div class="hours">
+        <p class="big-text" id="hours"></p>
+        <span>hours</span>
+      </div>
+      <div class="minutes">
+        <p class="big-text" id="minutes"></p>
+        <span>minutes</span>
+      </div>
+      <div class="seconds">
+        <p class="big-text" id="seconds"></p>
+        <span>seconds</span>
+      </div>
+    </div>
     <ul></ul>
   </body>
 </html>
