Some styling changes

--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <h1>Next birthday</h1>
+    <h1>Bitcoin's next halving</h1>
+
     <div class="counting-container">
-      <div class="days">
-        <p class="big-text" id="days"></p>
-        <span>days</span>
+      <div class="count-el days-class">
+        <p class="time-text" id="days">0</p>
+        <span> days </span>
       </div>
-      <div class="hours">
-        <p class="big-text" id="hours"></p>
-        <span>hours</span>
+      <div class="count-el hours-class">
+        <p class="time-text" id="hours">0</p>
+        <span> hours </span>
       </div>
-      <div class="minutes">
-        <p class="big-text" id="minutes"></p>
-        <span>minutes</span>
+      <div class="count-el minutes-class">
+        <p class="time-text" id="minutes">0</p>
+        <span> [mins]</span>
       </div>
-      <div class="seconds">
-        <p class="big-text" id="seconds"></p>
-        <span>seconds</span>
+      <div class="count-el seconds-class">
+        <p class="time-text" id="seconds">0</p>
+        <span> seconds </span>
       </div>
     </div>
-    <ul></ul>
   </body>
 </html>
