--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <div class="count-el minutes-class">
         <p class="time-text" id="minutes">0</p>
-        <span> [mins]</span>
+        <span> minutes</span>
       </div>
       <div class="count-el seconds-class">
         <p class="time-text" id="seconds">0</p>
