Commiting the finished logic

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <h1>Bitcoin's next halving</h1>
+    <h1>Comet Halley next appearance</h1>
 
     <div class="counting-container">
       <div class="count-el days-class">
